@@ -3,6 +3,12 @@ class ApplicationController < ActionController::Base
 
   layout "contour/layouts/application"
 
+  def about
+
+  end
+
+  protected
+
   def month_start_date(year, month)
     Date.parse("#{year}-#{month}-01")
   end
@@ -14,8 +20,6 @@ class ApplicationController < ActionController::Base
   def parse_date(date_string, default_date = '')
     date_string.to_s.split('/').last.size == 2 ? Date.strptime(date_string, "%m/%d/%y") : Date.strptime(date_string, "%m/%d/%Y") rescue default_date
   end
-
-  protected
 
   def check_system_admin
     redirect_to root_path, alert: "You do not have sufficient privileges to access that page." unless current_user.system_admin?
