@@ -1,0 +1,33 @@
+<div id="welcome-dialog" class="modal fade" style="display:none">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">×</a>
+    <h3>Welcome To <%= DEFAULT_APP_NAME %>!</h3>
+  </div>
+  <div class="modal-body">
+    <p>
+    To get started, you'll need to <b>create a project</b> for your tasks. Once you've created a project you can <b>double click</b> on the calendar to add tasks! You can also <b>add collaborators</b> to your project once they have signed up!
+    </p>
+    <% @project = current_user.all_projects.new() %>
+
+    <%= form_for(@project, remote: true, html: { class: 'form-horizontal' }) do |f| %>
+
+      <div class="control-group">
+        <%= f.label :name, 'Project Name', class: 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :name, class: 'text_field' %>
+        </div>
+      </div>
+
+    <% end %>
+
+  </div>
+
+  <div class="modal-footer">
+    <%#= link_to 'Close', '#', class: 'btn', data: { target: "#delete-sticky-dialog_#{sticky.id}", object: 'modal-hide' } %>
+    <%= link_to 'Create Project', '#', class: 'btn btn-primary', data: { target: "#new_project", object: 'submit' } %>
+  </div>
+</div>
+
+<%= javascript_tag do %>
+  $('#welcome-dialog').modal();
+<% end %>
