@@ -10,6 +10,7 @@
   * Cleaned up lists of stickies by changing how they expand when clicking on them
   * Default application name is now added to the from: field for emails
   * Email subjects no longer include the application name
+  * Users without projects will now be prompted when they view the calendar to create a project
 
 * Refactoring
   * Comments no longer use class_name or class_id and now require to be part of a sticky_id
